# mcp-server-app

./: .env.example  .funcignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  function_app.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: azure-static-web-apps-black-dune-027faae00.yml  ci.yml
api/: chat_handler.py  function_app.py  requirements.txt
config/: logging.yaml  settings.yaml
design_handoff_mcp_agent_console/: README.md  Vortex Agent.dc.html
docs/: azure.md  setup.md  tools.md
scripts/: create_sample_data.py  create_search_index.py  import_documents.py  index_documents.py  seed_blob_storage.py
src/azure/: blob_client.py  embeddings.py  foundry_agent.py  identity.py  search_client.py
src/core/: dependencies.py  logging.py  settings.py
src/database/: models.py  sql.py
src/models/: chat.py  customer.py  document.py  employee.py  search.py
src/services/: chat_service.py  customer_service.py  document_service.py  employee_service.py  search_service.py
src/tools/: _common.py  chat.py  customers.py  documents.py  employees.py  health.py  meetings.py  policies.py  search.py
tests/: conftest.py
tests/integration/: README.md
tests/unit/: test_api_chat_handler.py  test_chat_service.py  test_customer_service.py  test_database_sql.py  test_document_service.py  test_employee_service.py  (+7 more)
web/: app.js  index.html  staticwebapp.config.json  styles.css  vera-how-it-works.html  vera-how-it-works.js
