[project]
name = "enterprise-knowledge-mcp"
version = "0.1.0"
description = "Enterprise Knowledge Hub MCP Server - Azure Functions native MCP tool server"
requires-python = ">=3.13"
dependencies = [
    "azure-functions>=1.24.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "azure-identity>=1.19",
    "azure-storage-blob>=12.24",
    "azure-search-documents>=11.5",
    "azure-appconfiguration>=1.7",
    "azure-keyvault-secrets>=4.9",
    "azure-monitor-opentelemetry>=1.6",
    "sqlalchemy>=2.0",
    "pyodbc>=5.2",
    "pyyaml>=6.0",
    "openai>=2.44.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.8",
    "black>=24.10",
    # Only used by the separate api/ Functions app (deployed independently by
    # Static Web Apps' Managed Functions, with its own requirements.txt).
    # Kept here as a dev dependency so the shared toolchain can lint/test it
    # without it being part of the main Function App's deployed requirements.
    "azure-ai-projects>=2.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
